# SoftwareLabFinal

./: CMakeLists.txt  GUIFactory.h  README.md  main.cpp
tests/: GUIFactoryTests.cpp
